--- a/WEB_253502_Melikava.UI/Areas/Admin/Pages/Create.cshtml
+++ b/WEB_253502_Melikava.UI/Areas/Admin/Pages/Create.cshtml
@@ -11,12 +11,17 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Book.Title" class="control-label"></label>
                 <input asp-for="Book.Title" class="form-control" />
                 <span asp-validation-for="Book.Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Book.Author" class="control-label"></label>
+                <input asp-for="Book.Author" class="form-control" />
+                <span asp-validation-for="Book.Author" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Book.Description" class="control-label"></label>
@@ -34,14 +39,9 @@
                 <span asp-validation-for="Book.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book.Image" class="control-label"></label>
-                <input asp-for="Book.Image" class="form-control" />
-                <span asp-validation-for="Book.Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Book.ImageMimeType" class="control-label"></label>
-                <input asp-for="Book.ImageMimeType" class="form-control" />
-                <span asp-validation-for="Book.ImageMimeType" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
