Added authentication with Keycloak

--- a/WEB_253502_Melikava.UI/Views/Shared/_MenuPartial.cshtml
+++ b/WEB_253502_Melikava.UI/Views/Shared/_MenuPartial.cshtml
@@ -8,11 +8,23 @@
             .ToString()?
             .ToLower()
             ?? string.Empty;
+
+    var roles = @User
+         .Claims
+         .Where(c => c.Type == "user_roles")
+         .Select(c => c.Value)
+         .ToList();
+    var isPowerUser = roles.Contains("POWER-USER");
+
 }
 
 <a class="navbar-brand" href="#">WEB_253502_Melikava</a>
 <div class="navbar-nav">
     <a class="nav-item nav-link @(controller == "Home" ? "active" : "")" asp-controller="Home" asp-action="Index">ЛР 1</a>
     <a class="nav-item nav-link @(controller == "Book" ? "active" : "")" asp-controller="Book" asp-action="Index">Каталог</a>
-    <a class="nav-item nav-link @(area == "Admin" ? "active" : "")" asp-area="Admin" asp-page="/Index">Администрирование</a>
+    @if (User.Identity.IsAuthenticated && isPowerUser)
+    {
+        <a class="nav-item nav-link @(area == "Admin" ? "active" : "")" asp-area="Admin" asp-page="/Index">Администрирование</a>
+    }
+    
 </div>
