--- a/WEB_253502_Melikava.UI/Areas/Admin/Pages/_ViewImports.cshtml
+++ b/WEB_253502_Melikava.UI/Areas/Admin/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WEB_253502_Melikava.UI
 @using WEB_253502_Melikava.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WEB_253502_Melikava.UI
 @using WEB_253502_Melikava.Domain.Entities
