--- a/WEB_253502_Melikava.UI/Views/Shared/_CatalogAsync.cshtml
+++ b/WEB_253502_Melikava.UI/Views/Shared/_CatalogAsync.cshtml
@@ -17,7 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
-                    <a asp-controller="Cart" asp-action="Add" asp-route-productId="@item.Id" asp-route-returnUrl="@returnUrl" class="btn btn-primary">Add to cart</a>
+                    <a asp-controller="Cart" asp-action="Add" asp-route-id="@item.Id" asp-route-returnUrl="@returnUrl" class="btn btn-primary">Add to cart</a>
                 </div>
             </div>
         </div>
